# context-weave

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
app/: main.py
app/api/: routes_chat.py  routes_health.py  routes_sessions.py
app/context/: __init__.py  context_budget.py  context_diff.py  context_packer.py  context_scorer.py  context_selector.py  fact_extractor.py
app/core/: config.py  dependencies.py
app/db/: models.py  session.py
app/memory/: context_builder.py  fact_extractor.py  redis_store.py  summarizer.py
app/retrieval/: chunker.py  ranking.py  retriever.py
app/schemas/: chat.py  common.py  session.py
app/services/: chat_service.py  ingestion_service.py  llm_provider.py  session_inspector_service.py
docs/: README.md  architecture.md  data-model.md  decisions.md  evolution.md  frontend-demo.md  frontend.md  positioning.md  roadmap.md  testing.md
examples/: sample_conversations.json
examples/sample_documents/: architecture_principles.txt  demo_stack.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx
scripts/: ingest_sample_documents.py  seed_demo_data.py
tests/: conftest.py
tests/integration/: test_chat_flow.py  test_persistence.py  test_redis_store.py  test_session_context.py
tests/scenarios/: test_context_continuity.py
tests/unit/: test_chunker.py  test_context_budget.py  test_context_builder.py  test_context_diff.py  test_fact_extractor.py  (+1 more)
(+22 files in other folders)
